--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  /* line-height: 1.5; */
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(5, 5, 5, 0.596);
+  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,39 +15,35 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
+  color: #f8f8fc54;
 }
 a:hover {
   color: #535bf2;
 }
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+*{
+  box-sizing: border-box;
 }
-
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+  font-size: 3em; 
+} 
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  /* border-radius: 8px; */
+  border: none;
+  padding: 0.4em 1.1em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: rgba(245, 245, 241, 0.938);
   cursor: pointer;
   transition: border-color 0.25s;
+  outline: none;
+  color: grey;
 }
 button:hover {
-  border-color: #646cff;
+  background-color: rgba(250, 247, 247, 0.596);
+  color: black;
 }
 button:focus,
 button:focus-visible {
