--- a/src/Components/Repositories/Repositories.css
+++ b/src/Components/Repositories/Repositories.css
@@ -1,26 +1,61 @@
 .repo-section{
-    display: flex;
-    flex-wrap: wrap;
+    top: 10vh;
+    width: 100%;
+    left: 45%;
+    position: absolute;
     display: flex;
     justify-content: flex-start;
-    position: absolute;
-    left: 45%;
-    width: 100%;
+    align-items: center;
+    flex-direction: column;
+}
+
+.repositories{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    overflow-x: hidden;
+    width: 90%;
 }
 .repos{
-    top: 10vh;
     padding: 0;
     position: relative;
-    margin: 0;
-    background-color: rgba(207, 205, 205, 0.466);
-    padding: 1em;
-    width: 45%;
-    margin: 1em;
+    margin: 0.5em;
+    background-color: #F1F1E6;
+    width: 40%;
+}
+.repos .title{
+    width: 100%;
 }
 .repos .forks{
     display: flex;
     justify-content: center;
     align-content: center;
-    background-color: blanchedalmond;
+    background-color: #FFF7D6;
     margin: 0;
+    width: 100%;
+}
+.followers-cont{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 90%;
+}
+.followers-cont .follow{
+    width: 40%;
+    background-color: #FFF7D6;
+    margin: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.followers-cont .follow p{
+    color: white;
+    background-color: black;
+    padding: 0.3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
 }
