--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -1,8 +1,8 @@
 .profile{
     width: 30%;
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
+    justify-content: center;
+    align-items: flex-start;
     position: fixed;
     height: 100vh;
     top: 10vh;
@@ -10,6 +10,7 @@
     flex-direction: column;
     padding: 0.5em;
     border-right: 2px solid rgba(231, 225, 225, 0.671);
+    padding: 1em;
 }
 .profile img{
     width: 60%;
@@ -17,7 +18,7 @@
 }
 .profile button{
     width: 60%;
-    background-color: black;
+    background-color: #070F2B;
     color: white;
     border-radius: 5px;
 }
@@ -25,7 +26,21 @@
     background-color: black;
     color: white;
 }
+.profile h2{
+    font-size: 2.0em;
+    padding: 0;
+    margin: 0;
+}
+.profile h3{
+    font-size: 1.5em;
+    padding: 0;
+    margin: 0;
+}
 .profile h5{
     padding: 0.5em;
     margin: 0;
+}
+.profile p{
+    margin-top: 0;
+    margin-bottom: 0;
 }
