--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -2,19 +2,19 @@
     width: 30%;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     position: fixed;
     height: 100vh;
     top: 10vh;
     left: 0;
     flex-direction: column;
-    padding: 0.5em;
+    /* padding: 0em 0em;
+    margin: 0em 0em; */
     border-right: 2px solid rgba(231, 225, 225, 0.671);
-    padding: 1em;
 }
 .profile img{
-    width: 60%;
-    border-radius: 2em;
+    width: 50%;
+    border-radius: 1em;
 }
 .profile button{
     width: 60%;
