--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -45,3 +45,10 @@
     margin-top: 0;
     margin-bottom: 0;
 }
+
+@media (max-width: 720px){
+    .profile{
+        width: 35%;
+        padding: 2px;
+    }
+}
