"Update CSS styles for Profile, Repositories, and index components"

--- a/src/Components/Repositories/Repositories.css
+++ b/src/Components/Repositories/Repositories.css
@@ -4,8 +4,8 @@
     left: 45%;
     position: absolute;
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
 }
 
