--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -50,5 +50,19 @@
     .profile{
         width: 35%;
         padding: 2px;
+        top: 12.5vh;
+    }
+}
+
+@media (max-width: 530px){
+    .profile h2{
+        font-size: 1.5em;
+        padding: 0;
+        margin: 0;
+    }
+    .profile h3{
+        font-size: 1.0em;
+        padding: 0;
+        margin: 0;
     }
 }
