--- a/src/index.css
+++ b/src/index.css
@@ -62,3 +62,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+@media (max-width: 480px){
+  h1 {
+    font-size: 2.5em; 
+  } 
+}
